# Function-Composition

./: CMakeLists.txt  README.md
include/: function_composition.hpp  projecting_function.hpp  tools.hpp
test/: CMakeLists.txt
test/args_convert_test/: test.cc
